packages/wasm/src/tests/snapshots/wasm__tests__partition__broken_broken_then_good_chunks.snap
---
source: packages/wasm/src/tests/partition.rs
expression: summarize(&render.chunks)
---
[
  {
    "range": [
      0,
      22
    ],
    "items": 17,
    "width": 40.6,
    "height": 167.38,
    "x": -20.29,
    "y": 0.0
  }
]
