packages/wasm/src/tests/snapshots/wasm__tests__partition__broken_empty_sub_align_chunks.snap
---
source: packages/wasm/src/tests/partition.rs
expression: summarize(&render.chunks)
---
[
  {
    "range": [
      0,
      10
    ],
    "items": 7,
    "width": 19.6,
    "height": 12.4,
    "x": -9.79,
    "y": 0.0
  }
]
