packages/wasm/src/tests/snapshots/wasm__tests__partition__broken_empty_sub_bracket_diagnostics.snap
---
source: packages/wasm/src/tests/partition.rs
expression: render.diagnostics
---
[
  {
    "range": {
      "start": 6,
      "end": 7
    },
    "severity": "warning",
    "message": "empty math attachment; inserted `#none`",
    "hints": []
  }
]
