packages/wasm/src/tests/snapshots/wasm__tests__partition__broken_empty_sub_eof_diagnostics.snap
---
source: packages/wasm/src/tests/partition.rs
expression: render.diagnostics
---
[
  {
    "range": {
      "start": 4,
      "end": 4
    },
    "severity": "warning",
    "message": "empty math attachment; inserted `#none`",
    "hints": []
  },
  {
    "range": {
      "start": 4,
      "end": 4
    },
    "severity": "warning",
    "message": "unclosed math equation; inserted a closing `$`",
    "hints": []
  }
]
